--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1 style="color: blue;"> MY BIRTHDAY </h1> <hr>
      <h2> On the 12th May</h2>
-        <img src="../images/birthday2.jpeg" alt="birthday picture" width="100%" height="50%" style="text-align: center;"> <hr>
+        <img src="birthday.jpeg" alt="birthday picture" width="100%" height="50%" style="text-align: center;"> <hr>
 
     <h3>
             <table style="background-color: lightskyblue; padding: 20px; width: 50px; height: 20px; margin: 20px; color:solid green;">
@@ -44,4 +44,5 @@
     <p style="font-size: 20px;"> To know more about us or to contact us and reach out to us kindly click the link below</p>
     <p><a href="address.html"> <b>contact us</b></a></p>
 </body>
+
 </html>
