--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1 style="color: blue;"> MY BIRTHDAY </h1> <hr>
      <h2> On the 12th May</h2>
-        <img src="birthday.jpeg" alt="birthday picture" width="100%" height="50%" style="text-align: center;"> <hr>
+        <img src="birthday.jpeg.jpeg.jpeg" alt="birthday picture" width="100%" height="50%" style="text-align: center;"> <hr>
 
     <h3>
             <table style="background-color: lightskyblue; padding: 20px; width: 50px; height: 20px; margin: 20px; color:solid green;">
@@ -46,3 +46,4 @@
 </body>
 
 </html>
+
